gcc/testsuite/rust/rustc/ui/rfc-2627-raw-dylib/link-ordinal-too-large.rs
#![feature(raw_dylib)]
// { dg-warning "" "" { target *-*-* } .-1 }

#[link(name="foo")]
extern {
    #[link_ordinal(18446744073709551616)]
// { dg-error "" "" { target *-*-* } .-1 }
    fn foo();
}

fn main() {}

